# bipartite-gnn-gui

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TASK.md  pyproject.toml  requirements.txt
api/: main.py  pipeline.py  requirements.txt
configs/: default.yaml  experiment.yaml
data/samples/: README.md
docs/: ai-acknowledgement.docx  ai-acknowledgement.md  algorithm.md  midterm_report.html  midterm_report.md
docs/design/: detailed.md  high_level.md  schema.md
docs/development/: phase11_plan.md  web_demo.md
docs/requirements/: gt_format.md  metrics.md  usecase.md  vlm_format.md  vlm_inference.md
docs/research/: direction_confidence_completion.md  phase6_benchmark_report.md
experiments/: ablation_constraints.py  ablation_results.json  completion_results.json  cross_dataset.py  cross_dataset_results.json  eval_real_vlm_completion.py  eval_real_vlm_pipeline.py  eval_screenspot_completion.py  eval_screenspot_confidence.py  finetune_real_vlm.py  finetune_screenspot.py  phase9_913_results.json  results.json  run.py  screenspot_loader.py  sweep.py  test_sweep.py  train_confidence_real.py  train_with_visual.py
experiments/vlm_completion/: eval_real_results.json  per_image_results.json  pipeline_comparison.json  pipeline_per_image.json  summary.json
scripts/: benchmark_performance.py  download_datasets.py  evaluate_completion.py  evaluate_vlm_completion.py  generate_ollama_predictions.py  generate_screenspot_predictions.py  generate_vlm_predictions.py  precompute_dinov2_features.py  precompute_visual_features.py  run_experiment.py  train_completion.py  train_confidence.py  train_violation.py  vlm_gt_extraction.py
src/bipartite_gnn_gui/: __init__.py  _compat.py
src/bipartite_gnn_gui/data/: __init__.py  dataset.py  graph_dataset.py  ground_truth.py  masking.py  preprocess.py  rico_loader.py  vlm_output.py
src/bipartite_gnn_gui/eval/: __init__.py  baselines.py  evaluator.py  metrics.py  qualitative.py
src/bipartite_gnn_gui/graph/: __init__.py  augment.py  builder.py  constraints.py  schema.py  visualize.py
src/bipartite_gnn_gui/model/: __init__.py  attention.py  encoder.py  heads.py  inference.py  losses.py  model.py  trainer.py
tests/: __init__.py  test_data_dataset.py  test_data_graph_dataset.py  test_data_ground_truth.py  test_data_preprocess.py  test_data_rico.py  test_data_vlm.py  test_eval_baselines.py  test_eval_evaluator.py  test_eval_metrics.py  test_eval_qualitative.py  test_graph_augment.py  test_graph_builder.py  test_graph_constraints.py  test_graph_schema.py  test_graph_visualize.py  test_imports.py  test_integration_5a.py  test_integration_5b.py  test_model_encoder.py  test_model_heads.py  test_model_inference.py  test_model_losses.py  test_model_model.py  test_model_trainer.py  test_setup.py  test_utils_bbox.py  test_utils_config.py  test_utils_logging.py
web/: index.html
(+5 files in other folders)
