[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bipartite-gnn-gui"
version = "0.1.0"
description = "Heterogeneous Bipartite GNN for GUI Structure Error Correction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["gnn", "graph-neural-network", "gui", "vlm", "bipartite-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0",
    "pydantic>=2.5.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "matplotlib>=3.7.0",
    "transformers>=4.36.0",
]
test = [
    "pytest>=7.4.0",
]
wandb = [
    "wandb>=0.16.0",
]
tensorboard = [
    "tensorboard>=2.14.0",
]
all = [
    "bipartite-gnn-gui[dev]",
    "bipartite-gnn-gui[test]",
    "bipartite-gnn-gui[wandb]",
    "bipartite-gnn-gui[tensorboard]",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bipartite_gnn_gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
